Update telegram checker components and sandbox logic and remove legacy assets
