# artifacts/api-server/src/lib/logger.ts
@@ -8,6 +8,9 @@ export const logger = pino({
     "req.headers.authorization",
     "req.headers.cookie",
     "res.headers['set-cookie']",
+    "req.body.apiHash",
+    "req.body.code",
+    "req.body.password",
   ],
   ...(isProduction
     ? {}
